--- a/TwitterAnalyzer.ipynb
+++ b/TwitterAnalyzer.ipynb
@@ -12,7 +12,7 @@
         "IoMMLI-f7E85",
         "YKSNw4ufkw-k"
       ],
-      "authorship_tag": "ABX9TyOg6SbjFZSH0WfyhmPgyIXE",
+      "authorship_tag": "ABX9TyNljNsjMlZ7Rvj4wGqr24bl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Sentiment Analysis Model parsing tweets from Twitter"
+        "# Sentiment Analysis Model acquiring tweets from Twitter"
       ],
       "metadata": {
         "id": "g-MdfKqK3qTg"
@@ -47,22 +47,22 @@
       "cell_type": "markdown",
       "source": [
         "**Introduction**\n",
-        "\n",
-        "The internet has become an ocean of data. We find data everywhere in the cyberworld as all websitea are collecting some form of data whether it is email addresses, product sales, or number of views. \n",
-        "\n",
-        "Social Media platforms are the biggest data repositories on the web as individuals will store their personal information, post pictures, and share their views. Facebook, Instagram, and Twitter are the primary social platforms today, and in particular Twitter is different because users are only allowed 280 characters per tweet (post). As a result, tweets are excellent for Natural Language Processing and Sentimental Analysis because they are primarily text only compared to Facebook and Instagram which are focused on sharing photos. \n",
-        "\n",
+        " \n",
+        "The internet has become an ocean of data. We find data everywhere in the cyberworld as all websites are collecting some form of data whether it is email addresses, product sales, or number of views. \n",
+        " \n",
+        "Social Media platforms are the biggest data repositories on the web as individuals will store their personal information, post pictures, and share their views. Facebook, Instagram, and Twitter are the primary social platforms today, and in particular Twitter is different because users are only allowed 280 characters per tweet (post). As a result, tweets are excellent for Natural Language Processing and Sentimental Analysis because they are primarily text only compared to Facebook and Instagram which are centered around sharing photos.\n",
+        " \n",
         "**Purpose**\n",
-        "\n",
-        "The purpose of this exploration is to analyze and perform Sentimental Analysis on a specific Twitter page which posts a certain type of content. The page is called Great Mind Quotes and each tweet is a quote from a well-known individual in history or from our society today. I chose the Great Mind Quotes page because they are an old exisiting page with a high follower count and posting several times a day.\n",
-        "\n",
+        " \n",
+        "The purpose of this exploration is to analyze and perform Sentimental Analysis on a Twitter page called Great Mind Quotes. Each tweet on the page is a quote from a well-known individual in history or from our society today. I chose the Great Mind Quotes page because they are an old existing page from February 2009 with a high follower count and they are posting several times a day.\n",
+        " \n",
         "**Reasoning**\n",
-        "\n",
-        "In addition, I specifically chose to analyze and perform Sentimental Analysis on quotes because they resonate differently with all individuals. For example, individuals read quotes for various reasons such as, to be inspired, wanting to hear the harsh truth, or simply wanting friendly advice. For that reason, the quotes being posted on social pages must be applicable to a large audience. Today, often times people will set their screensaver with a quote, write a quote down on paper and place it on the wall, or even share it with friends. This made me wonder if the social media pages that post quotes are feeding positivity to people's minds. \n",
-        "\n",
+        " \n",
+        "In addition, I specifically chose to analyze and perform Sentimental Analysis on quotes because they resonate differently with all individuals. For example, individuals read quotes for various reasons such as, to be inspired, wanting to hear the harsh truth, or simply wanting friendly advice. For that reason, the quotes being posted on social pages must be applicable to a large audience. Today, oftentimes people will set their screensaver with a quote, write a quote down on paper and place it on the wall, or even share it with friends. This made me wonder if the social media pages that post quotes are feeding positivity to people's minds. \n",
+        " \n",
         "**Use**\n",
-        "\n",
-        "By replicating this exploration, a large number of insights can be found for a selected Twitter user. For example, the overall positivity/negativity for tweets, subjectivity/objectivity of tweets, how tweets are grouped and classified, how the text used in a tweet impacts group membership, and so much more!  "
+        " \n",
+        "By replicating this exploration, a large number of insights can be found for a selected Twitter user. For example, the overall positivity/negativity for tweets, subjectivity/objectivity of tweets, how tweets are grouped and classified, how the text used in a tweet impacts group membership, and so much more!  \n"
       ],
       "metadata": {
         "id": "C3L2B3oxsXLh"
@@ -81,9 +81,9 @@
       "cell_type": "markdown",
       "source": [
         "Sentimental Analysis is the process of identifying the emotions and tone behind a writer's message. There are two properties of Sentimental Analysis in the Python TextBlob library that help determine the emotions and tone in some given text, Polarity and Subjectivity. \n",
-        "\n",
+        " \n",
         "1.   **Polarity** is the measure of how positive or negative a phrase/sentence is. The range of possible polarity scores falls between -1 and 1. A polarity score closer to -1 means the tweet is negative and a score closer to 1 means the tweet is positive. If the polarity score is exactly zero, it is considered neutral.\n",
-        "2.   **Subjectivity** is the measure of whether a phrase/sentence is more subjective (personal emotion, judgement, opinion) or objective (factual information). The subjectivity score falls on a range of 0 and 1. A subjectivity score closer to 0 means the tweet is more objective and a score closer to 1 means the tweet is more subjective.\n",
+        "2.   **Subjectivity** is the measure of whether a phrase/sentence is more subjective (personal emotion, judgment, opinion) or objective (factual information). The subjectivity score falls on a range of 0 and 1. A subjectivity score closer to 0 means the tweet is more objective and a score closer to 1 means the tweet is more subjective.\n",
         "\n"
       ],
       "metadata": {
@@ -351,8 +351,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        " \n",
-        "\n",
         "*   If the polarity score for a tweet is **less than 0 and greater than -1**, it is a **negative** tweet. \n",
         "*   If the polarity score for a tweet is **exactly 0**, then it is a **neutral** tweet.\n",
         "\n",
@@ -567,7 +565,7 @@
         "\n",
         "Out of the **200** tweets that were analyzed, **117** are **objective** and **83** are **subjective**. This is a fairly even split as **58.5%** of tweets in this study possess a subjectivity score between **0 and 0.49**, inclusive. Additionally, **41.5%** of tweets in this study possess a subjectivity score between **0.50 and 1**, inclusive. \n",
         "\n",
-        "All in all, the Great Mind Quotes Twitter page delivers a fair split of objective and subjective content. Famous quotes are often times generalizations that are applicable to the general population. Other times the text of a quote can be influenced by a personal belief or emotion, making the delivery sound subjective."
+        "All in all, the Great Mind Quotes Twitter page delivers a fair split of objective and subjective content. Famous quotes are oftentimes generalizations that are applicable to the general population. Other times the text of a quote can be influenced by a personal belief or emotion, making the delivery sound subjective."
       ],
       "metadata": {
         "id": "joFGReFcus5w"
@@ -678,7 +676,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Definitions and Backgroud Knowledge Below:**"
+        "**Definitions and Backgroud Knowledge Below:**\n",
+        "\n",
+        "**Cohesion** is the measure of how **similar** members are within a group.\n",
+        "\n",
+        "**Separation** is the measure of how **different** groups are from each other."
       ],
       "metadata": {
         "id": "3vkA9o_p60UN"
@@ -687,41 +689,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Cohesion** is the measure of how **similar** members are within a group."
-      ],
-      "metadata": {
-        "id": "IAuHHowak2Uv"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Separation** is the measure of how **different** groups are from each other."
-      ],
-      "metadata": {
-        "id": "LCNye6YwmQRo"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "**Silhouette Score Summary**\n",
+        "\n",
         "*   Based on two factors (Cohesion and Separation)\n",
         "*   Range of possible scores is between -1 and 1\n",
-        "*   A score below 0 and closer to -1 means there is low cohesion and low separation in the groups\n",
+        "\n",
         "*   A score above 0 and closer to 1 means there is high cohesion and high separation in the groups\n",
+        "*   A score below 0 and closer to -1 means there is low cohesion and low separation in the groups\n",
         "\n",
-        "*   **High performing clustering models usually have high cohesion and high separation**\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "*  **High performing clustering models usually have high cohesion and high separation**"
       ],
       "metadata": {
-        "id": "6gPr7EqCWVii"
+        "id": "NeCzPzoWxGBb"
       }
     },
     {
@@ -736,7 +715,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**K-Means Algorithm Quick Summary**"
+        "**K-Means Algorithm Quick Summary**\n",
+        "\n",
+        "The K-Means algorithm is an iterative algorithm (recurring) which uses distance between data points to build groups (clusters). K-Means assumes that all clusters in the model have equal variances and a spherical shape. The only input K-Means requires is 'K', the number of clusters to create. In addition, the characteristics (variables) used to group the data must also be defined. "
       ],
       "metadata": {
         "id": "7XayK4ltxtwV"
@@ -745,15 +726,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The K-Means algorithm is an iterative algorithm (recurring) which uses distance between data points to build groups (clusters). The only input K-Means requires is 'K', the number of clusters to create. In addition, the characteristics (variables) used to group the data must also be defined. "
-      ],
-      "metadata": {
-        "id": "-fJdZAF6x2-a"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "**K-Means Algorithm Steps**\n",
+        "\n",
         "**First**, the algorithm begins by choosing K random points (K is the number of groups to create). The K random points can be thought of as group leaders. **Second**, surrounding data points are assigned to the nearest group leader (solely based on distance). **Third**, an average of all data points in a cluster is taken to recalculate the center of the cluster. Lastly, the second and third step are **repeated** until there is little or no change in the clusters of the model."
       ],
       "metadata": {
@@ -908,7 +882,7 @@
         "\n",
         "1.   Age is whatever you think it is. You are as old as you think you are. - Muhammad Ali\n",
         "\n",
-        "The quotes in this cluster tend to lack emotion and personability. Instead, the speech delivery of these quotes is more similar to a general statement as the tone is very directive and straight to the point.\n",
+        "The quotes in this cluster tend to lack emotion and personability. Instead, the speech delivery of these quotes is more similar to a general statement as the tone is very direct and straight to the point.\n",
         "\n",
         "Overall, the cluster has high cohesion and moderately high separation with no clear outliers. "
       ],
@@ -964,23 +938,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Expectation Maximization Algorithm Quick Summary**"
+        "**Expectation Maximization Algorithm Quick Summary**\n",
+        "\n",
+        "The Expectation Maximization (EM) algorithm has many use cases, but for this study it will be used to cluster data. EM is an iterative algorithm similar to K-Means, and also follows a similar algorithmic process when creating the model. \n",
+        " \n",
+        "Although K-Means and EM follow a very similar process to build their models, there are a few important differences. First, the data points in a K-Means model all have a hard assignment to their respective cluster. This means that each data point can only belong to the nearest cluster. In Expectation Maximization, each data point has a soft assignment. Basically every data point is assigned a probability of being in each possible cluster. Second, K-Means assumes all clusters have equal variances and are spherically shaped. EM does not assume clusters have equal variances, instead the algorithm estimates the actual variance for each cluster. This allows for clusters to be ellipsoid instead of being spherical.\n",
+        "\n"
       ],
       "metadata": {
-        "id": "_behMqNX5BMT"
+        "id": "qI0dOlVI5GTK"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The Expectation Maximization (EM) algorithm has many use cases, but for this study it will be used to cluster data. EM is an iterative algorithm similar to K-Means, and also follows a similar algorithmic process when creating the model. \n",
-        "\n",
-        "Although K-Means and EM follow a very similar process to build their models, there are a few important differences. First, the data points in a K-Means model all have a hard assignment to their respective cluster. This means that each data point can only belong to the nearest cluster. In Expectation Maximization, each data point has a soft assignment. Basically every data point is assigned a probability of being in each possible cluster, instead of simply assigning a data point to a cluster based on distance like K-Means. Second, K-Means assumes all clusters have equal variances and are spherically shaped. EM does not assume clusters have equal variances, instead the algorithm estimates the actual variance for each cluster. This allows for clusters to be ellipsoid shape instead of being spherical.\n",
+        "**Expectation Maximization Algorithm Steps**\n",
         "\n",
         "Expectation Maximization requires only one input, which is K, the number of clusters to create. **First**, the algorithm chooses K random points. **Second** is the expectation step, each data point calculates the probability of being in each cluster. **Third** is the maximization step, the probabilities of each data point are used to recalculate means and variances of each cluster. The second and third steps are **repeated** until there is little or no change in the clusters of the model."
       ],
       "metadata": {
-        "id": "qI0dOlVI5GTK"
+        "id": "L59mGrWvyQw8"
       }
     },
     {
@@ -1124,17 +1101,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1.** Beginning with the **purple** cluster, since EM determines group membership based on probabilities instead of distances, this cluster is barely visible in the scatterplot above. The reason for this is because 65 out of 200 tweets have a subjectivity and polarity score of 0.0. As a result, all 65 datapoints form the purple cluster.\n",
-        "\n",
+        "**1.** Beginning with the **purple** cluster, since EM determines group membership based on probabilities instead of distances, this cluster is barely visible in the scatterplot above. The reason for this is because 65 of 200 tweets have a subjectivity and polarity score of 0.0. As a result, all 65 data points form the purple cluster.\n",
+        " \n",
         "This cluster can be characterized as **objective** with **neutral** **polarity**. Example tweets for this group are as follows:\n",
-        "\n",
+        " \n",
         "1.   Some people want it to happen, some wish it would happen, others make it happen. - Michael Jordan\n",
         "2.   What is not started today is never finished tomorrow. - Johann Wolfgang von Goethe\n",
-        "\n",
+        " \n",
         "1.   When we get too caught up in the busyness of the world we lose connection with one another and ourselves. - Jack Kornfield\n",
-        "\n",
+        " \n",
         "The quotes belonging to this cluster lack personability, as there is not a sense of personal belief or emotion. In addition, these quotes are very neutral in their tone as they are not negative or positive. \n",
-        "\n",
+        " \n",
         "All in all, this cluster has extremely high cohesion and separation with zero outliers. However, this group has no variance compared to the other groups, and that makes the purple cluster represent a very specific niche of tweets. Unfortunately, this does impact the other clusters in the EM model because they have to explain significantly more data with higher variance."
       ],
       "metadata": {
@@ -1221,7 +1198,7 @@
       "source": [
         "**Shortcomings and Future** \n",
         "\n",
-        "The main shortcoming of this exploration is not removing stop words (ex. \"a\", \"the\", \"are\", etc.) from the data. By removing stop words the subjectivtiy and polarity scores of the quotes could have been different and possibly improved.\n",
+        "The main shortcoming of this exploration is not removing stop words (ex. \"a\", \"the\", \"are\", etc.) from the data. By removing stop words the subjectivity and polarity scores of the quotes could have been different and possibly improved.\n",
         "\n",
         "Some future additions that I would like to add to this exploration are listed below: \n",
         "\n",
